project(win-blkback)

################################################################################
# Includes
################################################################################

include_directories( .. )

################################################################################
# Sources
################################################################################
#	BlkBackend.cpp
#
set(SOURCES
	disk-image-test.cpp
	DiskImage.cpp
)

################################################################################
# Targets
################################################################################

add_executable(blk-back ${SOURCES})

set_target_properties(blk-back PROPERTIES
            CXX_STANDARD 17
            CXX_EXTENSIONS OFF
            )

################################################################################
# Libraries
################################################################################

target_link_libraries(
	xenbe
)
